// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Check /> Additional buttons 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn btn-default"
    disabled={false}
    type="button"
  >
    Try Query
  </button>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Additional class 1`] = `
<div
  className="clearfix"
>
  <div
    className="btn-toolbar-confirm pull-right btn-toolbar"
    role="toolbar"
  >
    <button
      className="btn-confirm btn btn-link"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    <button
      className="btn-confirm btn btn-success"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`<Check /> Basic Init 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Cancel label 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Reset
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Disabled 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Save button style 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Save button type 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Save label 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save Configuration
  </button>
</div>
`;

exports[`<Check /> Saving 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-spinner fa-w-16 fa-spin icon-fixed-width"
    data-icon="spinner"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <button
    className="btn-confirm btn btn-link"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="btn-confirm btn btn-success"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Show Cancel button 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
   
  <button
    className="btn-confirm btn btn-success"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</div>
`;

exports[`<Check /> Show Save button 1`] = `
<div
  className="btn-toolbar-confirm btn-toolbar"
  role="toolbar"
>
  <button
    className="btn-confirm btn btn-link"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
</div>
`;
